[package]
name = "liboverdrop"
description = "Configuration library, with directory overlaying and fragments dropins"
version = "0.0.3-alpha.0"
license = "MIT/Apache-2.0"
authors = ["Luca Bruno <luca.bruno@coreos.com>", "Robert Fairley <rfairley@redhat.com>"]
repository = "https://github.com/overdrop/liboverdrop-rs"
rust-version = "1.56.0"
edition = "2021"
exclude = [".gitignore", ".github"]

[dependencies]
log = "^0.4.6"

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: liboverdrop release {{version}}"
pro-release-commit-message = "cargo: development version bump"
tag-message = "liboverdrop {{version}}"
