[package]
name = "liboverdrop"
description = "Configuration library, with directory overlaying and fragments dropins"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Luca Bruno <luca.bruno@coreos.com>", "Robert Fairley <rfairley@redhat.com>"]
repository = "https://github.com/coreos/liboverdrop-rs"
readme = "README.md"
rust-version = "1.56.0"
edition = "2021"
exclude = [".gitignore", ".github"]

[dependencies]
log = "^0.4.6"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = false
publish = false
pre-release-commit-message = "cargo: liboverdrop release {{version}}"
tag-message = "liboverdrop {{version}}"
